Added Thymeleaf HTML template for air quality endpoint.